# dataone

./: .env.example  .gitignore  COMMAND_CATALOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/workflows/: do-not-refactor-the-entire-repository-in-one-pass.md
docs/: DASHBOARDS.md  DATA_DICTIONARY.md  DATA_MODELING.md  DECISION.md  INFRASTRUCTURE_GUIDE.md  NIFI_FLOWS_GUIDE.md  ORCHESTRATOR.md  Prefect_Migration_Plan.md  QUARANTINE_LAYER.md  TESTING_GUIDE.md  workflow.md
docs/future/: Airflow_Migration_Implementation_Plan.md  Cloud_Deployment_Plan.md  Future_Improvements.md  ML_Model_Implementation_Plan.md
docs/illustration/: DATA_ENGINEERING_ARCHITECTURE.md  DATA_ENGINEERING_QA.md  DATA_FLOW_STEPS.md  PROJECT_OVERVIEW_FRESHMAN.md
infra/prometheus/: prometheus.yml
metadata/contracts/: bronze.campaigns.json  bronze.clickstream.json  bronze.dead_letters.json  bronze.order_items.json  bronze.orders_cdc.json  bronze.products.json  bronze.reviews.json  gold.conversion_rate.json  (+32 more)
scripts/: generate_metadata.py  run_batch_job.sh  seed_postgres.sh  wait_for_services.sh
src/: query_dlq.py  test_bronze.py
tests/: conftest.py  test_alerting_rules.py  test_backfill.py  test_bronze_silver_products_orderitems.py  test_cdc_simulator.py  test_clickhouse_ddl.py  test_generators.py  test_grafana_dashboards.py  test_iceberg_helpers.py  test_lineage.py  test_metadata_contracts.py  test_orchestration.py  test_quality_gate_summary.py  test_scd2.py  test_scheduler.py  test_schemas.py  test_validators.py
(+206 files in other folders)
